# hillel-reality-i-1-i-backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  default.conf  docker-compose.override.dev.yml  docker-compose.yml  load_prof_and_serv.py  professions_and_services.json  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.run/: Run django.run.xml
apps/base/: urls.py  utils.py  views.py
apps/base/tasks/: __init__.py  create_post_categories_if_empty.py  create_superuser_if_not_exist.py  generate_professions_if_table_is_empty.py  populate_cities_if_table_is_empty.py
apps/content/: admin.py
apps/content/api/: urls.py
apps/content/filters/: __init__.py  article_filter.py  comment_filter.py  post_filter.py
apps/content/forms/: post_validate_admin_form.py
apps/content/migrations/: 0001_initial.py  0002_article_professional_tags.py  0002_initial.py  0003_comment_helpful_count_comment_not_helpful_count.py  0003_rename_article_post_rename_article_comment_post_and_more.py  (+37 more)
apps/expert/: admin.py  apps.py  models.py  urls.py
apps/files/: admin.py  urls.py
apps/location/: admin.py  models.py  urls.py
apps/phonenumbers/: apps.py
apps/templates/: index.html
apps/users/: admin.py  permissions.py  urls.py  utils.py
core/: asgi.py  celery_app.py  password_validation.py  settings.py  settings_test.py  urls.py  wsgi.py
docker/app/: entrypoint.sh  init-configs.sh  start.sh
requirements/: base.txt  local.txt  production.txt
temp_images/: readme.txt
tests/: conftest.py
tests/fixtures/: __init__.py
(+295 files in other folders)
